--- a/status-page/example-status-page.yaml
+++ b/status-page/example-status-page.yaml
@@ -2,6 +2,8 @@ status-page:
   image_width: "20"
   image_height: "20"
   imaged_dir: "images"
+  css_file: css/styles.css
+  refresh_secs: 60
   aws_profile: "default"
   aws_region: "us-east-1"
   aws_file: "/etc/badassops/aws"
